Bug 65901 - module-combine-sink stops pulseaudio by assertion when disableing soundcard
Summary: module-combine-sink stops pulseaudio by assertion when disableing soundcard
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-18 16:41 UTC by kriserik
Modified: 2013-06-20 10:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description kriserik 2013-06-18 16:41:53 UTC
I use pulseaudio version 4.0-2 on archlinux.
When the module-combine-sink is loaded and I try to disable one of my two soundcards in pavucontrol pulseaudio stops with this error message:

module-combine-sink.c: Assertion 'pa_idxset_remove_by_data(o->userdata->outputs, o, NULL)' failed at modules/module-combine-sink.c:927, function on output_free(). Aborting.
Comment 1 Tanu Kaskinen 2013-06-18 18:23:31 UTC
Thanks for the report! I sent a fix to the mailing list: http://thread.gmane.org/gmane.comp.audio.pulseaudio.general/17242


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.